--- a/inference_server/Dockerfile
+++ b/inference_server/Dockerfile
@@ -5,8 +5,11 @@ FROM python:3.10-slim
 WORKDIR /app
 
 RUN apt-get update && \
-    apt-get install -y gcc libmagic1 && \
-    pip install --no-cache-dir -r requirements.txt
+    apt-get install -y gcc libmagic1
+
+COPY requirements.txt .
+
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY inference_server.py .
 
