--- a/inference_server/requirements.txt
+++ b/inference_server/requirements.txt
@@ -1,6 +1,6 @@
-flask
-transformers
-torch==1.13.1+cpu
-spacy
-sentencepiece
+flask==3.0.3
+transformers==4.42.3
+spacy==3.7.5
+sentencepiece==0.2.0
+huggingface-hub==0.23.4
 
